--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "clsx": "^1.2.1",
     "daisyui": "^2.51.5",
     "react": "^18.2.0",
